# nodeeditor

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/qml-ex1/: CMakeLists.txt  customTest.cpp  customTest.h  ellipseitem.cpp  ellipseitem.h  flowview.cpp  flowview.h  graphview.cpp  graphview.h  main.cpp  main.qml  simplegraphmodel.cpp
include/QtNodes/: QmlBasicGraphicsScene  QmlGraphicsView
include/QtNodes/internal/: BasicGraphicsScene.hpp  QmlBasicGraphicsScene.hpp  QmlGraphicsView.hpp
include/nodes/internal/: FlowView.hpp  NodePainterDelegate.hpp
qml/: QmlBasicGraphicsScene.cpp  QmlBasicGraphicsScene.hpp  QmlGraphicsView.cpp  QmlGraphicsView.hpp
qml/CustomItems/: BackgroundNode.cpp  BackgroundNode.h  TestNodeItem.cpp  TestNodeItem.h  gridnode.cpp  gridnode.h
qml/CustomNodes/: BackgroundNode.cpp  BackgroundNode.h  gridnode.cpp  gridnode.h
render_abstraction/: AbstractConnectionGraphicsObject.h  AbstractGraphicsScene.h  AbstractGrapicsView.h  AbstractNodeGraphicsObject.h
src/: FlowView.cpp  NodePainter.cpp  QmlBasicGraphicsScene.cpp  QmlGraphicsView.cpp
